Added option to render PDF for printing (with binding offset)

--- a/main.tex
+++ b/main.tex
@@ -16,6 +16,11 @@
 % Note: Add "showframe" option to see margins
 \usepackage[left=0.5in, right=0.5in, top=0.75in, bottom=0.75in]{geometry}
 
+% Render with binding offset (for printing)
+% Search for "bindingoffset" here for info about that:
+% https://www.overleaf.com/learn/latex/How_to_Write_a_Thesis_in_LaTeX_(Part_2):_Page_Layout
+% \usepackage[left=0.5in, right=0.5in, top=0.75in, bottom=0.75in, bindingoffset=0.2in]{geometry}
+
 % Headers
 \input{resources/header.tex}
 
