[rukmal] Removed binding offset altogether; was messing up page breaks. I found this out AFTER printing it smfh

--- a/main.tex
+++ b/main.tex
@@ -19,7 +19,8 @@
 % Render with binding offset (for printing)
 % Search for "bindingoffset" here for info about that:
 % https://www.overleaf.com/learn/latex/How_to_Write_a_Thesis_in_LaTeX_(Part_2):_Page_Layout
-% \usepackage[left=0.5in, right=0.5in, top=0.75in, bottom=0.75in, bindingoffset=0.2in]{geometry}
+% NOTE: DO NOT INCREASE BINDING OFFSET; messes up page breaks (need to fix this; if I care enough in the future :))
+% \usepackage[left=0.5in, right=0.5in, top=0.75in, bottom=0.75in, bindingoffset=0.1in]{geometry}
 
 % Headers
 \input{resources/header.tex}
